--- a/02_data.ipynb
+++ b/02_data.ipynb
@@ -66,6 +66,130 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "* Data Normalization:\n",
+    "\n",
+    "Data normalization (also called data scaling) is the process of transforming data to have a consistent scale."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "scaler = MinMaxScaler()\n",
+    "data['age'] = scaler.fit_transform(data[['age']])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Hiding missing values\n",
+    "Missing values are gaps in the data where no value is recorded for a certain variable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop rows with missing values\n",
+    "data = data.dropna()\n",
+    "\n",
+    "# Filling missing values with mena value\n",
+    "data['income'].fillna(data['income'].mean(), inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exploratory Data Analysis (EDA):\n",
+    "\n",
+    "### Understanding Your Data Through Summary Statistics:\n",
+    "Summary statistics provide a concise overview of key properties of your data. These statistics help you understand the distribution, central tendency, variability, and potential anomalies in your dataset.\n",
+    "\n",
+    "Common summary statistics include:\n",
+    "\n",
+    "* Mean: The average value of a variable.\n",
+    "* Median: The middle value of a variable when the data is sorted.\n",
+    "* Standard Deviation: A measure of how spread out the values are around the mean.\n",
+    "* Minimum and Maximum: The smallest and largest values in the dataset.\n",
+    "* Percentiles: Values that divide the data into specified percentiles. For example, the 25th percentile (Q1) is the value below which 25% of the data falls."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate summary statistics\n",
+    "\n",
+    "mean_age = data['age'].mean()\n",
+    "median_income = data['income'].median()\n",
+    "std_dev_height = data['height'].std()\n",
+    "\n",
+    "print(f\"Mean age: {mean_age}\")\n",
+    "print(f\"Median Income: {median_income}\")\n",
+    "print(f\"Standard Deviation of Height: {std_dev_height}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Vizualization of EDA:\n",
+    "Visualizations help you gain a deeper understanding of your data by providing a graphical representation of its distribution, relationships, and trends. Here are three important types of visualizations often used in EDA:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Histogram:\n",
+    "A histogram is a graphical representation of the distribution of numerical data. It divides the data into bins and displays the frequency or count of data points in each bin."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
@@ -105,15 +229,15 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
